tooling/nargo_cli/tests/snapshots/execute__tests__slice_loop_force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "10671098874538012270",
  "abi": {
    "parameters": [
      {
        "name": "points",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "struct",
            "path": "Point",
            "fields": [
              {
                "name": "x",
                "type": {
                  "kind": "field"
                }
              },
              {
                "name": "y",
                "type": {
                  "kind": "field"
                }
              }
            ]
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62SMQ7CMAxFE9pwHju2G3vjKgTc+x8BIjIgGDrUT7L+YOkNXz+nD+V9Of1znXmbCefASFcOdF0CXUugaw10lS8XwcbsrToS3qFaVwGWvikqisqzKpEra7NuDQyZHHcx8n3gj9H9+rORNDc0ulzmv6RjXrAPYa6EAgAA",
  "debug_symbols": "TYzdCsMgDEbfJde9cIzC8FXGKP7EEhCVqIMhffelpYXe5XyHnAEebV8XSiFX0O8BMTvTKCehAeqYajFpp9oMN9AvNU+Aycv1fGwTBIoIelbbR8AyxUjrcs/I/DVMxkY8MfTkbrb9ymWu/8LZoe+Me+lwkv8D",
  "file_map": {
    "50": {
      "source": "struct Point {\n    x: Field,\n    y: Field,\n}\n\nimpl Point {\n    fn serialize(self) -> [Field; 2] {\n        [self.x, self.y]\n    }\n}\n\nfn sum(values: [Field]) -> Field {\n    let mut sum = 0;\n    for value in values {\n        sum = sum + value;\n    }\n    sum\n}\n\nfn main(points: [Point; 3]) {\n    let mut serialized_points = &[];\n    for point in points {\n        serialized_points = serialized_points.append(point.serialize().as_slice());\n    }\n    // Do a compile-time check that needs the previous loop to be unrolled\n    if serialized_points.len() > 5 {\n        let empty_point = Point { x: 0, y: 0 };\n        serialized_points = serialized_points.append(empty_point.serialize().as_slice());\n    }\n    // Do a sum that needs both the previous loop and the previous if to have been simplified\n    assert_eq(sum(serialized_points), 21);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/slice_loop/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
